--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,9 +6,54 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <script src="https://kit.fontawesome.com/06e85665b3.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="styles.css">
   <title>Watch order</title>
 </head>
 <body>
+  
+  <nav class="level nav-colors">
+    <div class="level-left">
+      <div class="level-item">
+        <a href="#">
+          <img src="TikTak_logo.png" width="180px">
+        </a>
+      </div>
+    </div>
+
+    <div class="level-right">
+      <p class="has-text-centered">Buy watches now!</p>
+    </div>
+  </nav>
+
+  
+  <aside class="menu">
+    <p class="menu-label">
+      Vásárlás
+    </p>
+    <ul class="menu-list">
+      <li><a>Órák</a></li>
+    </ul>
+
+    <p class="menu-label">
+      Rendelések
+    </p>
+    <ul class="menu-list">
+      <li><a>Saját rendeléseim</a></li>
+      <li><a>Összes rendelés</a></li>
+    </ul>
+
+    <hr>
+
+    <p class="menu-label">
+      Nem
+    </p>
+    <ul class="menu-list">
+      <li><a>Férfi</a></li>
+      <li><a>Nő</a></li>
+    </ul>
+
+  </aside>
+  
 
 </body>
 </html>
