Translate from hungarian to english

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <script src="https://kit.fontawesome.com/06e85665b3.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="styles.css">
-  <title>Watch order</title>
+  <title>Order watches today!</title>
 </head>
 <body>
   
@@ -28,28 +28,28 @@
   
   <aside class="menu">
     <p class="menu-label">
-      Vásárlás
+      Shop
     </p>
     <ul class="menu-list">
-      <li><a>Órák</a></li>
+      <li><a>Watches</a></li>
     </ul>
 
     <p class="menu-label">
-      Rendelések
+      Orders
     </p>
     <ul class="menu-list">
-      <li><a>Saját rendeléseim</a></li>
-      <li><a>Összes rendelés</a></li>
+      <li><a>My Orders</a></li>
+      <li><a>Every order</a></li>
     </ul>
 
     <hr>
 
     <p class="menu-label">
-      Nem
+      Sex
     </p>
     <ul class="menu-list">
-      <li><a>Férfi</a></li>
-      <li><a>Nő</a></li>
+      <li><a>Man</a></li>
+      <li><a>Woman</a></li>
     </ul>
 
   </aside>
