Implement icons to menu

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,15 +31,37 @@
       Shop
     </p>
     <ul class="menu-list">
-      <li><a>Watches</a></li>
+      <li>
+        <a class="icon-text">
+          <span class="icon">
+            <i class="fas fa-shopping-bag" style="color: #000000;"></i> 
+          </span>
+          <span>Watches</span>
+        </a>
+      </li>
     </ul>
 
     <p class="menu-label">
       Orders
     </p>
     <ul class="menu-list">
-      <li><a>My Orders</a></li>
-      <li><a>Every order</a></li>
+      <li>
+        <a class="icon-text">
+          <span class="icon">
+            <i class="fas fa-tasks" style="color: #000000;"></i>
+          </span>
+          <span>My Orders</span>
+        </a>
+      </li>
+      
+      <li>
+        <a class="icon-text">
+          <span class="icon">
+            <i class="fas fa-clipboard-list" style="color: #000000;"></i>
+          </span>
+          <span>List every order</span>
+        </a>
+      </li>
     </ul>
 
     <hr>
