add checkboxes for color filteration

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,6 +74,49 @@
       <li><a>Woman</a></li>
     </ul>
 
+    <hr>
+
+    <p class="menu-label">
+      Filter
+    </p>
+    <ul class="menu-list">
+      <label class="checkbox">
+        <input type="checkbox">
+        Black
+      </label>
+      <label class="checkbox">
+        <input type="checkbox">
+        Blue
+      </label>
+      <label class="checkbox">
+        <input type="checkbox">
+        Gold
+      </label>
+      <label class="checkbox">
+        <input type="checkbox">
+        White
+      </label>
+      <label class="checkbox">
+        <input type="checkbox">
+        Silver
+      </label>
+      <label class="checkbox">
+        <input type="checkbox">
+        Red
+      </label>
+      <label class="checkbox">
+        <input type="checkbox">
+        Camouflage
+      </label>
+      <label class="checkbox">
+        <input type="checkbox">
+        Yellow
+      </label>
+      <label class="checkbox">
+        <input type="checkbox">
+        Rose gold
+      </label>
+    </ul>
   </aside>
   
 
