--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,17 +67,30 @@
     <hr>
 
     <p class="menu-label">
+      <b>Filters</b>
+    </p>
+
+    <p class="menu-label">
       Sex
     </p>
     <ul class="menu-list">
-      <li><a>Man</a></li>
-      <li><a>Woman</a></li>
+      <li>
+        <label class="checkbox">
+          <input type="checkbox">
+          Man
+        </label>
+      </li>
+      
+      <li>
+        <label class="checkbox">
+          <input type="checkbox">
+          Woman
+        </label>
+      </li>
     </ul>
 
-    <hr>
-
     <p class="menu-label">
-      Filter
+      Color
     </p>
     <ul class="menu-list">
       <label class="checkbox">
