Implement Filter! search button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -130,6 +130,12 @@
         Rose gold
       </label>
     </ul>
+
+    <hr>
+
+    <p class="menu-label">
+      <button class="button is-small is-rounded">Filter!</button>
+    </p>
   </aside>
   
 
