Implement icon for search button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -134,7 +134,12 @@
     <hr>
 
     <p class="menu-label">
-      <button class="button is-small is-rounded">Filter!</button>
+      <button class="button is-small is-rounded">
+        <span class="icon">
+          <i class="fas fa-search" style="color: #000000;"></i>
+        </span>
+        <span>Filter!</span>
+      </button>
     </p>
   </aside>
   
