modify script.js file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <script src="https://kit.fontawesome.com/06e85665b3.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="styles.css">
+  <script src="/script.js" type="module"></script>
   <title>Order watches today!</title>
 </head>
 <body>
@@ -81,39 +82,39 @@
     </p>
     <ul class="menu-list">
       <label class="checkbox">
-        <input type="checkbox">
+        <input type="checkbox" value="black">
         Black
       </label>
       <label class="checkbox">
-        <input type="checkbox">
+        <input type="checkbox" value="blue">
         Blue
       </label>
       <label class="checkbox">
-        <input type="checkbox">
+        <input type="checkbox" value="gold">
         Gold
       </label>
       <label class="checkbox">
-        <input type="checkbox">
+        <input type="checkbox" value="white">
         White
       </label>
       <label class="checkbox">
-        <input type="checkbox">
+        <input type="checkbox" value="silver">
         Silver
       </label>
       <label class="checkbox">
-        <input type="checkbox">
+        <input type="checkbox" value="red">
         Red
       </label>
       <label class="checkbox">
-        <input type="checkbox">
+        <input type="checkbox" value="camouflage">
         Camouflage
       </label>
       <label class="checkbox">
-        <input type="checkbox">
+        <input type="checkbox" value="yellow">
         Yellow
       </label>
       <label class="checkbox">
-        <input type="checkbox">
+        <input type="checkbox" value="rose gold">
         Rose gold
       </label>
     </ul>
