Rearrange sidebar & implement Cart option

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,20 +47,11 @@
       </p>
       <ul class="menu-list">
         <li>
-          <a class="icon-text">
+          <a class="icon-text" id="cart">
             <span class="icon">
-              <i class="fas fa-tasks" style="color: #000000;"></i>
+              <i class="fas fa-shopping-cart" style="color: #000000;"></i>
             </span>
-            <span>My Orders</span>
-          </a>
-        </li>
-        
-        <li>
-          <a class="icon-text">
-            <span class="icon">
-              <i class="fas fa-clipboard-list" style="color: #000000;"></i>
-            </span>
-            <span>List every order</span>
+            <span>Cart</span>
           </a>
         </li>
       </ul>
