Remove text from top nav & adds icon to order btn

--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="level-right">
-      <p class="has-text-centered">Buy watches now!</p>
+      <!-- <p class="has-text-centered">Buy watches now!</p> -->
     </div>
   </nav>
 
@@ -333,7 +333,12 @@
                     <div class="level">
                       <div class="level-right">
                         <div class="level-item">
-                          <button class="button is-success is-rounded">Order!</button>
+                          <button class="button is-success is-rounded">
+                            <span class="icon">
+                              <i class="fas fa-money-check-alt"></i>
+                            </span>
+                            <span>Order now!</span>
+                          </button>
                         </div>
                       </div>
                     </div>
