--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="level-right">
-      <p class="has-text-centered">Buy watches now!</p>
+      <!-- <p class="has-text-centered">Buy watches now!</p> -->
     </div>
   </nav>
 
