Modify camouflage color to green

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -110,8 +110,8 @@
           Red
         </label>
         <label class="checkbox">
-          <input type="checkbox" value="camouflage">
-          Camouflage
+          <input type="checkbox" value="green">
+          Green
         </label>
         <label class="checkbox">
           <input type="checkbox" value="yellow">
