--- a/frontend/index.html
+++ b/frontend/index.html
@@ -126,7 +126,7 @@
       <hr>
 
       <p class="menu-label">
-        <button class="button is-small is-rounded">
+        <button id="filter" class="button is-small is-rounded">
           <span class="icon">
             <i class="fas fa-search" style="color: #000000;"></i>
           </span>
