--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -107,7 +107,7 @@
       <hr>
 
       <p class="menu-label">
-        <button class="button is-small is-rounded">
+        <button class="button is-rounded">
           <span class="icon">
             <i class="fas fa-search" style="color: #000000;"></i>
           </span>
