Implement basic color & design changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -107,9 +107,9 @@
       <hr>
 
       <p class="menu-label">
-        <button id="filter" class="button is-rounded">
+        <button id="filter" class="button is-rounded is-tiktok-pink">
           <span class="icon">
-            <i class="fas fa-search" style="color: #000000;"></i>
+            <i class="fas fa-search" style="color: whitesmoke;"></i>
           </span>
           <span>Filter!</span>
         </button>
