--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -311,7 +311,7 @@
 
                     <hr>
 
-                    <div class="level">
+                    <div class="level" id="post-btn">
                       <div class="level-right">
                         <div class="level-item">
                           <button class="button is-success is-rounded">
